ratelimit/1-vs-petstore-type.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      ratelimit:
        rateLimits:
        - actions:
          - requestHeaders:
              descriptorKey: type
              headerName: x-type
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
